--- a/styles.css
+++ b/styles.css
@@ -67,23 +67,32 @@ a {
   }
 }
 
-/* Sparkles */
-.sparkle {
-  position: absolute;
-  font-size: 2vw;
-  animation: sparkleAnimation 1s ease-out;
-  opacity: 0;
-  pointer-events: none;
-}
+#alertBox {
+  display: none;
+  position: fixed;
+  top: 25vh;
+  left: 50%;
+  padding: 30px 40px;
+  width: 50%;
+  transform: translateX(-50%);
+  background: rgb(146, 92, 44) 100%;
+  color: rgb(216, 224, 215);
+  border-radius: 5px;
+  text-align: center;
+  animation: fadeOut 0.5s ease-in-out forwards;
+  opacity: 1;
+  transition: opacity 0.5s ease-in-out;
+  z-index: 999;
 
-@keyframes sparkleAnimation {
-  0% {
-    opacity: 1;
-    transform: translate(-50%, -50%) scale(1);
-  }
-  100% {
-    opacity: 0;
-    transform: translate(-50%, -150%) scale(0.5);
+  button {
+    margin-top: 10px;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    background-color: rgb(230, 244, 233);
+    border: 1px solid grey;
+    color: rgb(30, 129, 190);
+    cursor: pointer;
   }
 }
 
